--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -14,7 +14,7 @@
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +114,7 @@
     "    property_transaction_logs, \\\n",
     "    area_name_zipcodes \\\n",
     "    where  \\\n",
-    "    property_transaction_logs.abnormal != true and \\\n",
+    "    ( abnormal = false OR abnormal IS NULL OR abnormal = 0 ) and \\\n",
     "    properties.sqft between 1 and 10000 and \\\n",
     "    property_transaction_logs.price between 500 and 400000 and \\\n",
     "    properties.bedrooms <= 6 and \\\n",
@@ -158,11 +158,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1221 rows affected.\n",
+      "1221 rows affected.\n"
+     ]
+    }
+   ],
    "source": [
     "# get list of top zipcodes to only run the model on them (put down 2000 to get every zipcode)\n",
     "zipcode_list = top_zipcodes(2000)\n",
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -186,11 +195,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "188554 rows affected.\n",
-      "4372 rows affected.\n",
-      "41737 rows affected.\n",
-      "Entries before filter:  234663\n",
-      "Entries after filter:  170908\n"
+      "225292 rows affected.\n",
+      "12214 rows affected.\n",
+      "49690 rows affected.\n",
+      "Entries before filter:  287196\n",
+      "Entries after filter:  213955\n"
      ]
     },
     {
@@ -235,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -297,65 +306,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7498334</th>\n",
-       "      <td>16202 W Mohave St, Goodyear, AZ 85338</td>\n",
+       "      <th>132390</th>\n",
+       "      <td>15491 W Moonlight Way, Surprise, AZ 85374</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4717</td>\n",
-       "      <td>2012-09-13</td>\n",
-       "      <td>2012-11-30</td>\n",
-       "      <td>78</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7491241</th>\n",
-       "      <td>12544 W Alegre Dr, Litchfield Park, AZ 85340</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5354</td>\n",
-       "      <td>2014-05-07</td>\n",
-       "      <td>2014-08-29</td>\n",
-       "      <td>114</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7481107</th>\n",
-       "      <td>15542 W Supai Cir, Goodyear, AZ 85338</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5149</td>\n",
-       "      <td>2014-01-03</td>\n",
-       "      <td>2014-02-05</td>\n",
-       "      <td>33</td>\n",
+       "      <td>5984</td>\n",
+       "      <td>2016-04-14</td>\n",
+       "      <td>2016-05-20</td>\n",
+       "      <td>36</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -369,17 +330,17 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7477511</th>\n",
-       "      <td>9038 E Crystal Dr, Sun Lakes, AZ 85248</td>\n",
+       "      <th>133038</th>\n",
+       "      <td>15770 W Silver Breeze Dr, Surprise, AZ 85374</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5595</td>\n",
-       "      <td>2015-02-12</td>\n",
-       "      <td>2015-04-27</td>\n",
-       "      <td>74</td>\n",
+       "      <td>6086</td>\n",
+       "      <td>2016-06-23</td>\n",
+       "      <td>2016-08-30</td>\n",
+       "      <td>68</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -393,17 +354,65 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1041628</th>\n",
-       "      <td>4590 E Hazeltine Way, Chandler, AZ 85249</td>\n",
+       "      <th>135238</th>\n",
+       "      <td>17200 W Bell Rd LOT 602, Surprise, AZ 85374</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6236</td>\n",
+       "      <td>2016-12-09</td>\n",
+       "      <td>2017-01-27</td>\n",
+       "      <td>49</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131643</th>\n",
+       "      <td>15249 W Honeysuckle Ln, Surprise, AZ 85374</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6296</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2017-03-28</td>\n",
+       "      <td>6032</td>\n",
+       "      <td>2016-06-08</td>\n",
+       "      <td>2016-07-07</td>\n",
+       "      <td>29</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>133362</th>\n",
+       "      <td>15914 W Monte Cristo Ave, Surprise, AZ 85374</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6075</td>\n",
+       "      <td>2016-07-01</td>\n",
+       "      <td>2016-08-19</td>\n",
+       "      <td>49</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -418,62 +427,62 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 153 columns</p>\n",
+       "<p>5 rows × 156 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                   address adult area_name  \\\n",
        "property_id                                                                  \n",
-       "7498334             16202 W Mohave St, Goodyear, AZ 85338    NaN        PH   \n",
-       "7491241      12544 W Alegre Dr, Litchfield Park, AZ 85340    NaN        PH   \n",
-       "7481107             15542 W Supai Cir, Goodyear, AZ 85338    NaN        PH   \n",
-       "7477511            9038 E Crystal Dr, Sun Lakes, AZ 85248    NaN        PH   \n",
-       "1041628          4590 E Hazeltine Way, Chandler, AZ 85249    NaN        PH   \n",
+       "132390          15491 W Moonlight Way, Surprise, AZ 85374    NaN        PH   \n",
+       "133038       15770 W Silver Breeze Dr, Surprise, AZ 85374    NaN        PH   \n",
+       "135238        17200 W Bell Rd LOT 602, Surprise, AZ 85374    NaN        PH   \n",
+       "131643         15249 W Honeysuckle Ln, Surprise, AZ 85374    NaN        PH   \n",
+       "133362       15914 W Monte Cristo Ave, Surprise, AZ 85374    NaN        PH   \n",
        "\n",
        "            bathrooms bedrooms construction  date_closed date_listed  \\\n",
        "property_id                                                            \n",
-       "7498334             3        5          NaN         4717  2012-09-13   \n",
-       "7491241             2        5          NaN         5354  2014-05-07   \n",
-       "7481107             2        3          NaN         5149  2014-01-03   \n",
-       "7477511             2        2          NaN         5595  2015-02-12   \n",
-       "1041628             3        5          NaN         6296        None   \n",
+       "132390              1        3          NaN         5984  2016-04-14   \n",
+       "133038              2        2          NaN         6086  2016-06-23   \n",
+       "135238              2        2          NaN         6236  2016-12-09   \n",
+       "131643              2        3          NaN         6032  2016-06-08   \n",
+       "133362              2        3          NaN         6075  2016-07-01   \n",
        "\n",
        "            date_transacted_latest days_on_market      ...      zipcode_85379  \\\n",
        "property_id                                            ...                      \n",
-       "7498334                 2012-11-30             78      ...                  0   \n",
-       "7491241                 2014-08-29            114      ...                  0   \n",
-       "7481107                 2014-02-05             33      ...                  0   \n",
-       "7477511                 2015-04-27             74      ...                  0   \n",
-       "1041628                 2017-03-28            NaN      ...                  0   \n",
+       "132390                  2016-05-20             36      ...                  0   \n",
+       "133038                  2016-08-30             68      ...                  0   \n",
+       "135238                  2017-01-27             49      ...                  0   \n",
+       "131643                  2016-07-07             29      ...                  0   \n",
+       "133362                  2016-08-19             49      ...                  0   \n",
        "\n",
        "            zipcode_85381 zipcode_85382 zipcode_85383 zipcode_85387  \\\n",
        "property_id                                                           \n",
-       "7498334                 0             0             0             0   \n",
-       "7491241                 0             0             0             0   \n",
-       "7481107                 0             0             0             0   \n",
-       "7477511                 0             0             0             0   \n",
-       "1041628                 0             0             0             0   \n",
+       "132390                  0             0             0             0   \n",
+       "133038                  0             0             0             0   \n",
+       "135238                  0             0             0             0   \n",
+       "131643                  0             0             0             0   \n",
+       "133362                  0             0             0             0   \n",
        "\n",
        "            zipcode_85388 zipcode_85390 zipcode_85392 zipcode_85395  \\\n",
        "property_id                                                           \n",
-       "7498334                 0             0             0             0   \n",
-       "7491241                 0             0             0             0   \n",
-       "7481107                 0             0             0             0   \n",
-       "7477511                 0             0             0             0   \n",
-       "1041628                 0             0             0             0   \n",
+       "132390                  0             0             0             0   \n",
+       "133038                  0             0             0             0   \n",
+       "135238                  0             0             0             0   \n",
+       "131643                  0             0             0             0   \n",
+       "133362                  0             0             0             0   \n",
        "\n",
        "            zipcode_85396  \n",
        "property_id                \n",
-       "7498334                 0  \n",
-       "7491241                 0  \n",
-       "7481107                 0  \n",
-       "7477511                 0  \n",
-       "1041628                 0  \n",
+       "132390                  0  \n",
+       "133038                  0  \n",
+       "135238                  0  \n",
+       "131643                  0  \n",
+       "133362                  0  \n",
        "\n",
-       "[5 rows x 153 columns]"
+       "[5 rows x 156 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -492,10 +501,10 @@
     {
      "data": {
       "text/plain": [
-       "53"
+       "10948"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
