--- a/scraper/sql_query_helper-ALL.nbconvert.ipynb
+++ b/scraper/sql_query_helper-ALL.nbconvert.ipynb
@@ -114,7 +114,7 @@
     "    property_transaction_logs, \\\n",
     "    area_name_zipcodes \\\n",
     "    where  \\\n",
-    "    property_transaction_logs.abnormal != true and \\\n",
+    "    ( abnormal = false OR abnormal IS NULL OR abnormal = 0 ) and \\\n",
     "    properties.sqft between 1 and 10000 and \\\n",
     "    property_transaction_logs.price between 500 and 400000 and \\\n",
     "    properties.bedrooms <= 6 and \\\n",
@@ -167,8 +167,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1221 rows affected.\n",
-      "1221 rows affected.\n"
+      "1222 rows affected.\n",
+      "1222 rows affected.\n"
      ]
     }
    ],
@@ -195,11 +195,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "188123 rows affected.\n",
-      "7793 rows affected.\n",
-      "41277 rows affected.\n",
-      "Entries before filter:  237193\n",
-      "Entries after filter:  173383\n"
+      "225715 rows affected.\n",
+      "11482 rows affected.\n",
+      "60403 rows affected.\n",
+      "Entries before filter:  297600\n",
+      "Entries after filter:  214695\n"
      ]
     },
     {
@@ -306,89 +306,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7491241</th>\n",
-       "      <td>12544 W Alegre Dr, Litchfield Park, AZ 85340</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>None</td>\n",
-       "      <td>5354</td>\n",
-       "      <td>2014-05-07</td>\n",
-       "      <td>2014-08-29</td>\n",
-       "      <td>114</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1041628</th>\n",
-       "      <td>4590 E Hazeltine Way, Chandler, AZ 85249</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>None</td>\n",
-       "      <td>6296</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2017-03-28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>436999</th>\n",
-       "      <td>12731 W Hollyhock Dr, Avondale, AZ 85392</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>None</td>\n",
-       "      <td>485</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2001-04-30</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7453725</th>\n",
-       "      <td>10326 W Charter Oak Dr, Sun City, AZ 85351</td>\n",
+       "      <th>298654</th>\n",
+       "      <td>3105 E Mulberry Dr, Phoenix, AZ 85016</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>None</td>\n",
-       "      <td>6143</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2016-10-26</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>5189</td>\n",
+       "      <td>2014-02-08</td>\n",
+       "      <td>2014-03-17</td>\n",
+       "      <td>37</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -402,16 +330,16 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1490639</th>\n",
-       "      <td>17168 W Saguaro Ln, Surprise, AZ 85388</td>\n",
+       "      <th>1876208</th>\n",
+       "      <td>934 E Vermont Ave, Phoenix, AZ 85014</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2484</td>\n",
        "      <td>None</td>\n",
-       "      <td>6294</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2017-03-26</td>\n",
+       "      <td>2006-10-20</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -419,7 +347,79 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8957612</th>\n",
+       "      <td>36648 W Jones Ave, Tonopah, AZ 85354</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6175</td>\n",
+       "      <td>2016-10-22</td>\n",
+       "      <td>2016-11-27</td>\n",
+       "      <td>36</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8957609</th>\n",
+       "      <td>16239 W Sherman St, Goodyear, AZ 85338</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4456</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2012-03-14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8957610</th>\n",
+       "      <td>17767 W Corpus Christi Ct, Goodyear, AZ 85338</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5613</td>\n",
+       "      <td>2015-04-02</td>\n",
+       "      <td>2015-05-15</td>\n",
+       "      <td>43</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -431,53 +431,53 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                   address adult area_name  \\\n",
-       "property_id                                                                  \n",
-       "7491241      12544 W Alegre Dr, Litchfield Park, AZ 85340    NaN        PH   \n",
-       "1041628          4590 E Hazeltine Way, Chandler, AZ 85249    NaN        PH   \n",
-       "436999           12731 W Hollyhock Dr, Avondale, AZ 85392    NaN        PH   \n",
-       "7453725        10326 W Charter Oak Dr, Sun City, AZ 85351    NaN        PH   \n",
-       "1490639            17168 W Saguaro Ln, Surprise, AZ 85388    NaN        PH   \n",
+       "                                                    address adult area_name  \\\n",
+       "property_id                                                                   \n",
+       "298654               3105 E Mulberry Dr, Phoenix, AZ 85016    NaN        PH   \n",
+       "1876208               934 E Vermont Ave, Phoenix, AZ 85014    NaN        PH   \n",
+       "8957612               36648 W Jones Ave, Tonopah, AZ 85354    NaN        PH   \n",
+       "8957609             16239 W Sherman St, Goodyear, AZ 85338    NaN        PH   \n",
+       "8957610      17767 W Corpus Christi Ct, Goodyear, AZ 85338    NaN        PH   \n",
        "\n",
        "            bathrooms bedrooms construction  date_closed date_listed  \\\n",
        "property_id                                                            \n",
-       "7491241             2        5         None         5354  2014-05-07   \n",
-       "1041628             3        5         None         6296        None   \n",
-       "436999              3        4         None          485        None   \n",
-       "7453725             2        2         None         6143        None   \n",
-       "1490639             2        3         None         6294        None   \n",
+       "298654              2        2          NaN         5189  2014-02-08   \n",
+       "1876208             2        3          NaN         2484        None   \n",
+       "8957612             2        3          NaN         6175  2016-10-22   \n",
+       "8957609             2        3          NaN         4456        None   \n",
+       "8957610             2        3          NaN         5613  2015-04-02   \n",
        "\n",
        "            date_transacted_latest days_on_market      ...      zipcode_85379  \\\n",
        "property_id                                            ...                      \n",
-       "7491241                 2014-08-29            114      ...                  0   \n",
-       "1041628                 2017-03-28            NaN      ...                  0   \n",
-       "436999                  2001-04-30            NaN      ...                  0   \n",
-       "7453725                 2016-10-26            NaN      ...                  0   \n",
-       "1490639                 2017-03-26            NaN      ...                  0   \n",
+       "298654                  2014-03-17             37      ...                  0   \n",
+       "1876208                 2006-10-20            NaN      ...                  0   \n",
+       "8957612                 2016-11-27             36      ...                  0   \n",
+       "8957609                 2012-03-14            NaN      ...                  0   \n",
+       "8957610                 2015-05-15             43      ...                  0   \n",
        "\n",
        "            zipcode_85381 zipcode_85382 zipcode_85383 zipcode_85387  \\\n",
        "property_id                                                           \n",
-       "7491241                 0             0             0             0   \n",
-       "1041628                 0             0             0             0   \n",
-       "436999                  0             0             0             0   \n",
-       "7453725                 0             0             0             0   \n",
-       "1490639                 0             0             0             0   \n",
+       "298654                  0             0             0             0   \n",
+       "1876208                 0             0             0             0   \n",
+       "8957612                 0             0             0             0   \n",
+       "8957609                 0             0             0             0   \n",
+       "8957610                 0             0             0             0   \n",
        "\n",
        "            zipcode_85388 zipcode_85390 zipcode_85392 zipcode_85395  \\\n",
        "property_id                                                           \n",
-       "7491241                 0             0             0             0   \n",
-       "1041628                 0             0             0             0   \n",
-       "436999                  0             0             1             0   \n",
-       "7453725                 0             0             0             0   \n",
-       "1490639                 1             0             0             0   \n",
+       "298654                  0             0             0             0   \n",
+       "1876208                 0             0             0             0   \n",
+       "8957612                 0             0             0             0   \n",
+       "8957609                 0             0             0             0   \n",
+       "8957610                 0             0             0             0   \n",
        "\n",
        "            zipcode_85396  \n",
        "property_id                \n",
-       "7491241                 0  \n",
-       "1041628                 0  \n",
-       "436999                  0  \n",
-       "7453725                 0  \n",
-       "1490639                 0  \n",
+       "298654                  0  \n",
+       "1876208                 0  \n",
+       "8957612                 0  \n",
+       "8957609                 0  \n",
+       "8957610                 0  \n",
        "\n",
        "[5 rows x 156 columns]"
       ]
@@ -501,7 +501,7 @@
     {
      "data": {
       "text/plain": [
-       "6606"
+       "11149"
       ]
      },
      "execution_count": 6,
